# pytsql

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  NOTICE.txt  README.md  environment.yml  pixi.toml  pyproject.toml  setup-miniconda-patched-environment.yml  setup.cfg  setup.py  start_mssql.sh
.github/workflows/: build_and_publish.yml  build_wheels.yml  ci.yaml  update_grammar.yml
conda_recipe/: meta.yaml
docs/source/: api.rst  conf.py  development.rst  index.rst  installation.rst  usage.rst
docs/src/: conf.py  index.rst
src/pytsql/: __init__.py  tsql.py
src/pytsql/grammar/: TSqlLexer.py  TSqlParser.g4  TSqlParser.interp  TSqlParser.py  TSqlParserListener.py  __init__.py  adjust_antlrs_grammar.py  helper_generate_grammar_targets.sh  helper_generate_parsers.sh  sa_tsql.py  tsql.g4  tsql.interp  tsql.tokens  tsqlLexer.interp  tsqlLexer.py  tsqlListener.py  tsqlParser.py
src/pytsql/grammar/cpp_src/: TSqlLexer.cpp  TSqlLexer.h  TSqlLexer.interp  TSqlParser.h  TSqlParser.interp  TSqlParser.tokens  TSqlParserBaseVisitor.cpp  TSqlParserBaseVisitor.h  TSqlParserVisitor.cpp  TSqlParserVisitor.h  sa_tsql_cpp_parser.cpp  sa_tsql_translator.cpp  sa_tsql_translator.h  tsql.interp  tsqlBaseVisitor.cpp  tsqlBaseVisitor.h  tsqlLexer.cpp  tsqlLexer.h  tsqlLexer.interp  tsqlLexer.tokens  tsqlParser.cpp  tsqlParser.h  tsqlVisitor.cpp  tsqlVisitor.h
src/pytsql/grammar/cpp_src/antlr4-cpp-runtime/atn/: ProfilingATNSimulator.cpp
tests/integration/: conftest.py  test_executes.py  test_iter_executes_batches.py  test_logging.py  test_multiple_statements.py  test_non_isolation_mode.py  test_parseable.py  test_prints.py  test_regression.py
tests/unit/: helpers.py  test_control_flow.py  test_dynamics.py  test_parameterize.py  test_parametrize.py  test_parse_listener.py  test_pivot.py  test_print.py  test_py_vs_cpp.py  test_split.py  test_uncomment.py
