[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']
build-backend = "setuptools.build_meta"

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
ensure_newline_before_comments = true
line_length = 88
known_first_party = "pytsql"
skip_glob = '\.eggs/*,\.git/*,\.venv/*,build/*,dist/*'
default_section = 'THIRDPARTY'

[[tool.mypy.overrides]]
module = "pytsql.grammar.*"
follow_imports = "silent"
