[build-system]
requires = ['setuptools', 'setuptools-scm', 'wheel']
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"


[project]
name = "pytsql"
description = "`Pytsql` allows to run mssql sripts, typically run via GUIs, via CLI."
authors = [
  { name = "Alex Gonopolskiy", email = "agonopol@gmail.com" },
  { name = "Kevin Klein", email = "kevin.klein@quantco.com" },
  { name = "Encho Mishinev", email = "encho.mishinev@gmail.com" },
  { name = "Sven Giegerich", email = "sven.giegerich@quantco.com" },
]

maintainers = [{ name = "Kevin Klein", email = "kevin.klein@quantco.com" }]
keywords = ["sql", "mssql", "databases", "automation", "parametrization"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
]
readme = "README.md"
dynamic = ["version"]

requires-python = ">=3.9"

dependencies = [
  "sqlalchemy >=1.4,<3",
  "antlr4-python3-runtime >=4.10,<4.14",
  "pyodbc >=4.0.30",
  "click",
]

[project.urls]
Source = "https://github.com/quantco/pytsql"

[[tool.mypy.overrides]]
module = "pytsql.grammar.*"
follow_imports = "silent"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["E501", "N803", "N806"]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pep8-naming
  "N",
  # pyupgrade
  "UP",
]
exclude = ["src/pytsql/grammar/**/*.py"]

[tool.typos.default.extend-words]
hax = "hax"

[tool.ruff.lint.isort]
known-first-party = ["pytsql"]
