[metadata]
name = pytsql
description = Running large tsql scripts on mssql
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Quantco/pytsql_oss
author = QuantCo, Inc.
author_email = noreply@quantco.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License

[options]
package_dir=
    =src
packages = find:
include_package_data = true
install_requires =
    sqlalchemy
    antlr4-python3-runtime=4.9.2
python_requires = >=3.7

[options.packages.find]
where = src


